--- a/kidz tution tracker/Base.lproj/Tuitions.storyboard
+++ b/kidz tution tracker/Base.lproj/Tuitions.storyboard
@@ -807,7 +807,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.076245285570000002" green="0.77416694159999999" blue="0.95813018080000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                             <color key="textColor" red="0.18483450030000001" green="0.26589486769999998" blue="0.3444911859" alpha="1" colorSpace="calibratedRGB"/>
                         </textAttributes>
                     </navigationBar>
