--- a/kidz tution tracker/Attendance.storyboard
+++ b/kidz tution tracker/Attendance.storyboard
@@ -377,45 +377,73 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="SPS-s8-tqb">
-                                <rect key="frame" x="30" y="74" width="540" height="60"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="NQ6-8m-BFg">
+                                <rect key="frame" x="20" y="74" width="560" height="120"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RM6-Xo-6z4">
-                                        <rect key="frame" x="0.0" y="20" width="405" height="20"/>
-                                        <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="17"/>
-                                        <color key="textColor" red="0.18483450030000001" green="0.26589486769999998" blue="0.3444911859" alpha="1" colorSpace="calibratedRGB"/>
-                                        <color key="highlightedColor" red="0.050499327480792999" green="0.85151749849319458" blue="0.90783721208572388" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </label>
-                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="NjN-7g-bSJ">
-                                        <rect key="frame" x="410" y="16" width="130" height="29"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="tQ6-f2-B5o">
+                                        <rect key="frame" x="0.0" y="0.0" width="560" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="Tuition" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ws7-CZ-9yf">
+                                                <rect key="frame" x="0.0" y="21" width="511" height="19"/>
+                                                <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="16"/>
+                                                <color key="textColor" red="0.076245285570000002" green="0.77416694159999999" blue="0.95813018080000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="highlightedColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zeq-I6-BUQ">
+                                                <rect key="frame" x="516" y="21" width="45" height="19"/>
+                                                <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="16"/>
+                                                <color key="textColor" red="1" green="0.55228611080000001" blue="0.09885414528" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.99194461109999998" green="0.99615627529999995" blue="0.99600595240000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" red="0.076245285570000002" green="0.77416694159999999" blue="0.95813018080000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="130" id="A4c-Wo-ac1"/>
+                                            <constraint firstAttribute="height" constant="60" id="yjY-oY-ncR"/>
                                         </constraints>
-                                        <segments>
-                                            <segment title="Attended"/>
-                                            <segment title="Absent"/>
-                                        </segments>
-                                        <connections>
-                                            <action selector="statusChanged:" destination="JuP-KT-2qe" eventType="valueChanged" id="kou-5F-Q8q"/>
-                                        </connections>
-                                    </segmentedControl>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="SPS-s8-tqb">
+                                        <rect key="frame" x="0.0" y="60" width="560" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RM6-Xo-6z4">
+                                                <rect key="frame" x="0.0" y="20" width="425" height="20"/>
+                                                <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="17"/>
+                                                <color key="textColor" red="0.18483450030000001" green="0.26589486769999998" blue="0.3444911859" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="highlightedColor" red="0.050499327480792999" green="0.85151749849319458" blue="0.90783721208572388" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </label>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="NjN-7g-bSJ">
+                                                <rect key="frame" x="430" y="16" width="130" height="29"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="130" id="A4c-Wo-ac1"/>
+                                                </constraints>
+                                                <segments>
+                                                    <segment title="Attended"/>
+                                                    <segment title="Absent"/>
+                                                </segments>
+                                                <connections>
+                                                    <action selector="statusChanged:" destination="JuP-KT-2qe" eventType="valueChanged" id="kou-5F-Q8q"/>
+                                                </connections>
+                                            </segmentedControl>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.99194461107254028" green="0.99615627527236938" blue="0.99600595235824585" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="UL5-Vc-bZQ"/>
+                                        </constraints>
+                                    </stackView>
                                 </subviews>
-                                <color key="backgroundColor" red="0.99194461107254028" green="0.99615627527236938" blue="0.99600595235824585" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="UL5-Vc-bZQ"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="SPS-s8-tqb" secondAttribute="trailing" constant="10" id="5yY-Rk-xom"/>
-                            <constraint firstItem="SPS-s8-tqb" firstAttribute="leading" secondItem="1af-xA-X6s" secondAttribute="leadingMargin" constant="10" id="FBV-9T-n3D"/>
-                            <constraint firstItem="SPS-s8-tqb" firstAttribute="top" secondItem="Ng6-Kl-9bd" secondAttribute="bottom" constant="10" id="sFP-yj-aFQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="NQ6-8m-BFg" secondAttribute="trailing" id="9l8-h4-LeV"/>
+                            <constraint firstItem="NQ6-8m-BFg" firstAttribute="top" secondItem="Ng6-Kl-9bd" secondAttribute="bottom" constant="10" id="SYC-lb-CkD"/>
+                            <constraint firstItem="NQ6-8m-BFg" firstAttribute="leading" secondItem="1af-xA-X6s" secondAttribute="leadingMargin" id="Z2e-mN-Ll7"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="attendanceSegemnt" destination="NjN-7g-bSJ" id="zNC-Cf-gqX"/>
                         <outlet property="dayLabel" destination="RM6-Xo-6z4" id="zet-eS-QE9"/>
+                        <outlet property="tuitionLabel" destination="ws7-CZ-9yf" id="g0M-Ev-OZ5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uh9-A7-Gp7" userLabel="First Responder" sceneMemberID="firstResponder"/>
