--- a/kidz tution tracker/Base.lproj/Tuitions.storyboard
+++ b/kidz tution tracker/Base.lproj/Tuitions.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EdV-Gj-zWN">
-                                <rect key="frame" x="20" y="64" width="560" height="536"/>
+                                <rect key="frame" x="20" y="69" width="560" height="531"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" showsReorderControl="YES" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TuitionsTableViewCell" id="krY-jg-Idq" customClass="TuitionsTableViewCell" customModule="kidz_tuition_tracker" customModuleProvider="target">
@@ -28,14 +28,14 @@
                                             <rect key="frame" x="0.0" y="0.0" width="527" height="59.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="CkF-zM-swY">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="CkF-zM-swY">
                                                     <rect key="frame" x="8" y="8" width="511" height="44"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="L0i-q3-XfC">
-                                                            <rect key="frame" x="0.0" y="0.0" width="511" height="21"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="L0i-q3-XfC">
+                                                            <rect key="frame" x="0.0" y="0.0" width="511" height="24"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hp6-Ff-zo7">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="511" height="21"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hp6-Ff-zo7">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="511" height="24"/>
                                                                     <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="19"/>
                                                                     <color key="textColor" red="0.33300504089999999" green="0.7348342538" blue="0.91016590600000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <color key="highlightedColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -93,7 +93,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="kY7-8P-enX" firstAttribute="top" secondItem="EdV-Gj-zWN" secondAttribute="bottom" id="13O-Eg-ssb"/>
-                            <constraint firstItem="EdV-Gj-zWN" firstAttribute="top" secondItem="3IQ-eI-if4" secondAttribute="bottom" id="88w-wJ-9QR"/>
+                            <constraint firstItem="EdV-Gj-zWN" firstAttribute="top" secondItem="3IQ-eI-if4" secondAttribute="bottom" constant="5" id="88w-wJ-9QR"/>
                             <constraint firstAttribute="trailingMargin" secondItem="EdV-Gj-zWN" secondAttribute="trailing" id="IVY-7c-oQb"/>
                             <constraint firstItem="EdV-Gj-zWN" firstAttribute="leading" secondItem="LEr-1F-uaH" secondAttribute="leadingMargin" id="Zg4-U9-pNS"/>
                         </constraints>
@@ -422,10 +422,10 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="r5r-hh-nmz">
-                                            <rect key="frame" x="8" y="8" width="584" height="43.5"/>
+                                            <rect key="frame" x="18" y="18" width="584" height="34"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O0p-bI-Qym">
-                                                    <rect key="frame" x="0.0" y="12.5" width="584" height="19"/>
+                                                    <rect key="frame" x="0.0" y="8" width="584" height="19"/>
                                                     <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="16"/>
                                                     <color key="textColor" red="0.36240455510000003" green="0.66617798809999995" blue="0.91147774459999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <color key="highlightedColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -435,11 +435,25 @@
                                     </subviews>
                                     <color key="tintColor" red="0.2666666667" green="0.70196078429999997" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="r5r-hh-nmz" secondAttribute="trailing" constant="10" id="9w0-lw-pam"/>
+                                        <constraint firstItem="r5r-hh-nmz" firstAttribute="trailing" secondItem="FiG-gU-rZ7" secondAttribute="trailingMargin" constant="10" id="FmH-Hl-vdX"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="r5r-hh-nmz" secondAttribute="trailing" id="GGt-yw-l2h"/>
+                                        <constraint firstItem="r5r-hh-nmz" firstAttribute="trailing" secondItem="FiG-gU-rZ7" secondAttribute="trailingMargin" constant="10" id="J0R-ah-lnq"/>
+                                        <constraint firstItem="r5r-hh-nmz" firstAttribute="leading" secondItem="FiG-gU-rZ7" secondAttribute="leadingMargin" constant="10" id="JCe-II-ZFk"/>
                                         <constraint firstItem="r5r-hh-nmz" firstAttribute="top" secondItem="FiG-gU-rZ7" secondAttribute="topMargin" id="PAW-Pj-asa"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="r5r-hh-nmz" secondAttribute="bottom" id="XXH-nU-oW4"/>
                                         <constraint firstItem="r5r-hh-nmz" firstAttribute="leading" secondItem="FiG-gU-rZ7" secondAttribute="leadingMargin" id="ebf-eq-e6O"/>
+                                        <constraint firstItem="r5r-hh-nmz" firstAttribute="top" secondItem="FiG-gU-rZ7" secondAttribute="topMargin" constant="10" id="mJV-SD-wg7"/>
                                     </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="9w0-lw-pam"/>
+                                            <exclude reference="GGt-yw-l2h"/>
+                                            <exclude reference="J0R-ah-lnq"/>
+                                            <exclude reference="PAW-Pj-asa"/>
+                                            <exclude reference="ebf-eq-e6O"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
                                 <color key="tintColor" red="1" green="0.55228611080000001" blue="0.09885414528" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
